<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gradient_0">

    <include
        android:id="@+id/include3"
        style="@style/toolbarStyle"
        layout="@layout/common_mtoolbar" />

    <TextView
        android:id="@+id/nickname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="230dp"
        android:text="MyTour"
        android:textColor="#333333"
        android:textSize="@dimen/dp_36"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_8"
        android:text="share your travel moments"
        android:textColor="#999999"
        android:textSize="13dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nickname" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/usernameEd"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_30"
        android:layout_marginStart="36dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="36dp"
        android:background="@drawable/radius8_1"
        android:drawableLeft="@mipmap/yh"
        android:drawablePadding="@dimen/dp_12"
        android:hint="@string/username"
        android:inputType="text"
        android:maxLines="1"
        android:paddingLeft="@dimen/dp_12"
        android:textColorHint="@color/color_999999"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_2" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/emailEd"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_30"
        android:layout_marginStart="36dp"
        android:layout_marginTop="@dimen/dp_10"
        android:layout_marginEnd="36dp"
        android:background="@drawable/radius8_1"
        android:drawableLeft="@mipmap/yx"
        android:drawablePadding="@dimen/dp_12"
        android:hint="@string/email_address"
        android:inputType="text"
        android:maxLines="1"
        android:paddingLeft="@dimen/dp_12"
        android:textColorHint="@color/color_999999"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/usernameEd" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/passwordEd"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_30"
        android:layout_marginStart="36dp"
        android:layout_marginTop="@dimen/dp_10"
        android:layout_marginEnd="36dp"
        android:background="@drawable/radius8_1"
        android:drawableLeft="@mipmap/mm"
        android:drawablePadding="@dimen/dp_12"
        android:hint="@string/password"
        android:inputType="text"
        android:maxLines="1"
        android:paddingLeft="@dimen/dp_12"
        android:textColorHint="@color/color_999999"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailEd" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/passwordConfirmEd"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_30"
        android:layout_marginStart="36dp"
        android:layout_marginTop="@dimen/dp_10"
        android:layout_marginEnd="36dp"
        android:background="@drawable/radius8_1"
        android:drawableLeft="@mipmap/mm"
        android:drawablePadding="@dimen/dp_12"
        android:hint="@string/confirm_password"
        android:inputType="text"
        android:maxLines="1"
        android:paddingLeft="@dimen/dp_12"
        android:textColorHint="@color/color_999999"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordEd" />

    <LinearLayout
        android:id="@+id/lin_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_36"
        app:layout_constraintLeft_toLeftOf="@+id/passwordConfirmEd"
        app:layout_constraintTop_toBottomOf="@+id/passwordConfirmEd"
        android:orientation="horizontal">

    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/register"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_40"
        android:layout_marginStart="36dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="36dp"
        android:layout_marginBottom="50dp"
        android:background="@drawable/radius8_3"
        android:text="@string/register"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/dp_12"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/passwordConfirmEd"
        app:layout_constraintVertical_bias="0.054" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="350dp"
        android:layout_height="150dp"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/include3"
        app:srcCompat="@drawable/icon_no_color" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:text="Agree to policy"
        android:textColor="#3894FF"
        android:textSize="@dimen/dp_12"
        app:layout_constraintBottom_toTopOf="@+id/register"
        app:layout_constraintStart_toEndOf="@+id/policyAgree"
        app:layout_constraintTop_toBottomOf="@+id/passwordConfirmEd" />

    <CheckBox
        android:id="@+id/policyAgree"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordConfirmEd" />
</androidx.constraintlayout.widget.ConstraintLayout>